# devpilot

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
misc/: machine.toml
src/: main.rs
src/arguments/: machine.rs  mod.rs  project.rs  template.rs  workspace.rs
src/commands/: mod.rs
src/commands/machine/: add.rs  list.rs  mod.rs
src/commands/project/: mod.rs
