[package]
name = "devpilot"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
version = "0.1.5"
edition = "2021"
license = "MIT"

[[bin]]
name = "dp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
# serde_derive = "1.0"
colored = "2.0.4"
config = "0.14.0"
crossterm = "0.27.0"
directories = "5.0.1"
dotenv = "0.15.0"
inquire = "0.7.5"
interfaces = "0.0.9"
ratatui = "0.26.3"
